force-app/main/default/objects/Case/fields/CoveoV2__VisitId__c.field-meta.xml
<CustomField>
    <fullName>CoveoV2__VisitId__c</fullName>
    <label>UsageAnalytics VisitId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>