force-app/main/default/objects/Case/fields/CoveoV2__VisitorId__c.field-meta.xml
<CustomField>
    <fullName>CoveoV2__VisitorId__c</fullName>
    <label>UsageAnalytics VisitorId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>