force-app/main/default/objects/Case/fields/IP_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>IP_Delivery_Date__c</fullName>
    <description>Date the 7Summits IP unmanaged package was originally delivered via email</description>
    <inlineHelpText>Date the 7Summits IP unmanaged package was originally delivered via email</inlineHelpText>
    <label>IP Delivery Date</label>
    <type>Date</type>
</CustomField>