force-app/main/default/objects/Case/fields/Platform__c.field-meta.xml
<CustomField>
    <fullName>Platform__c</fullName>
    <label>Platform</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Jive (Hosted)</fullName>
            </value>
            <value>
                <fullName>Jive (Cloud)</fullName>
            </value>
            <value>
                <fullName>Salesforce (Lightning)</fullName>
            </value>
            <value>
                <fullName>Salesforce (Visualforce)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>