force-app/main/default/objects/Case/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>News Lightning Component</fullName>
            </value>
            <value>
                <fullName>Events Lightning Component</fullName>
            </value>
            <value>
                <fullName>Ideas Lightning Component</fullName>
            </value>
            <value>
                <fullName>Members Lightning Component</fullName>
            </value>
            <value>
                <fullName>Groups Lightning Component</fullName>
            </value>
            <value>
                <fullName>CoreConnect</fullName>
            </value>
            <value>
                <fullName>Jive Tile</fullName>
            </value>
            <value>
                <fullName>Custom Salesforce Project</fullName>
            </value>
            <value>
                <fullName>Custom Jive Project</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>