force-app/main/default/objects/Case/fields/Salesforce_Email__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Email__c</fullName>
    <label>Salesforce Email Address</label>
    <type>Email</type>
</CustomField>