force-app/main/default/objects/Case/fields/Warranty_Status__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Status__c</fullName>
    <description>Current status of IP-related warranty with 7Summits (typically expires 30 days after delivery of packaged IP for customers not also engaged with 7Summits services teams)</description>
    <inlineHelpText>Current status of IP-related warranty with 7Summits (typically expires 30 days after delivery of packaged IP for customers not also engaged with 7Summits services teams)</inlineHelpText>
    <label>Warranty Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Current</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Not sure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>