force-app/main/default/objects/Case/recordTypes/Internal_Support.recordType-meta.xml
<RecordType>
    <fullName>Internal_Support</fullName>
    <active>true</active>
    <businessProcess>Internal Support Process</businessProcess>
    <description>Record type for all internal helpdesk support cases</description>
    <label>Internal Support</label>
</RecordType>