force-app/main/default/objects/Case/validationRules/Prevent_Case_Status_Edit.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Case_Status_Edit</fullName>
    <active>true</active>
    <description>Prevent users (except for admins, IT support) from editing the status on internal support case.</description>
    <errorConditionFormula>RecordType.Name = &quot;Internal Support&quot;
&amp;&amp;
(NOT($Permission.Support_Case_Admin) &amp;&amp;
$Profile.Name &lt;&gt; &quot;System Administrator&quot;)
&amp;&amp;
(ISPICKVAL(Status, &quot;In Progress&quot;) ||
ISPICKVAL(Status, &quot;Waiting&quot;)||
ISPICKVAL(Status, &quot;Completed&quot;) ||
ISPICKVAL(Status, &quot;Cancelled&quot;))</errorConditionFormula>
    <errorMessage>Only members of the support team can update the case status.</errorMessage>
</ValidationRule>