force-app/main/default/objects/Case/validationRules/Prevent_Contact_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Contact_Name</fullName>
    <active>true</active>
    <description>Prevents users from accidentally creating cases by populating Steve&apos;s name as the &quot;Contact Name&quot; vs. their own name.</description>
    <errorConditionFormula>AND(Contact.LastName = &quot;Zemlo&quot;, RecordTypeId = &quot;0121E0000004BIQ&quot;)</errorConditionFormula>
    <errorMessage>Wait a minute, you&apos;re not Steve. Please enter your name to submit your support request.</errorMessage>
</ValidationRule>