force-app/main/default/objects/Case/validationRules/Require_Resolution_for_Support_Cases.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Resolution_for_Support_Cases</fullName>
    <active>true</active>
    <description>Require a resolution when closing an internal support case.</description>
    <errorConditionFormula>AND(RecordType.Name = &quot;Internal Support&quot;,
ISPICKVAL(Status, &quot;Closed&quot;),
Resolution__c =&quot;&quot;)</errorConditionFormula>
    <errorMessage>You must provide a resolution in order to close a case.</errorMessage>
</ValidationRule>