force-app/main/default/objects/Case/listViews/Closed_Internal_Support_Cases.listView-meta.xml
<ListView>
    <fullName>Closed_Internal_Support_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.STATUS</columns>
    <columns>NAME</columns>
    <columns>CASES.REASON</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>OWNER_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Internal_Support</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Closed</value>
    </filters>
    <label>4. Closed Internal Support Cases</label>
    <language>en_US</language>
    <sharedTo>
        <group>Internal_Support</group>
    </sharedTo>
</ListView>