force-app/main/default/objects/Case/listViews/New_Internal_Support_Cases.listView-meta.xml
<ListView>
    <fullName>New_Internal_Support_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.STATUS</columns>
    <columns>NAME</columns>
    <columns>CASES.REASON</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.CREATED_DATE</columns>
    <filterScope>Queue</filterScope>
    <label>2. New Internal Support Cases</label>
    <language>en_US</language>
    <queue>Internal_Support</queue>
    <sharedTo>
        <group>Internal_Support</group>
    </sharedTo>
</ListView>