force-app/main/default/objects/Case/listViews/X5_Internal_Support_Cases_Open_7_Days.listView-meta.xml
<ListView>
    <fullName>X5_Internal_Support_Cases_Open_7_Days</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.STATUS</columns>
    <columns>NAME</columns>
    <columns>CASES.REASON</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>OWNER_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Internal_Support</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Closed,Cancelled</value>
    </filters>
    <filters>
        <field>Age__c</field>
        <operation>greaterOrEqual</operation>
        <value>7</value>
    </filters>
    <label>5. Internal Support Cases Open 7+ Days</label>
    <language>en_US</language>
    <sharedTo>
        <group>Internal_Support</group>
    </sharedTo>
</ListView>