force-app/main/default/objects/Case/listViews/Your_Support_Requests.listView-meta.xml
<ListView>
    <fullName>Your_Support_Requests</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.REASON</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Logged_in_Users_Case__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Your Support Requests</label>
    <language>en_US</language>
</ListView>